@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(xournal, 0.2)
+AM_INIT_AUTOMAKE(xournal, 0.2.1)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
