@@ -44,8 +44,7 @@ Xournal can be downloaded at
  Xournal aims to provide superior graphical quality (subpixel resolution) and overall
  functionality; however it lacks the collaborative features of Jarnal.
  Since Xournal is still in its early development stages, it may not
- be fully stable, and some features have not been implemented yet
- (in particular, freeform selection and PDF backgrounds are missing).
+ be fully stable, and some features have not been implemented yet.
 </p>
 <h2 class="subtitle">Table of contents</h2>
 <p>
@@ -458,7 +457,7 @@ Version 0.2 (January 29, 2006):
  <li>option to antialias and filter bitmap backgrounds when zooming</li>
  <li>option to emulate eraser tip with right mouse button</li>
  <li>binary installer allows non-root installation without compiling</li>
- <li>full-screen mode</li>
+ <li>full-screen mode (patch contributed by Luca De Cicco)</li>
 </ul>
 </p>
 <p>
